tests/baselines/reference/typeOfThisInStaticMembers3(target=es5).errors.txt
tests/cases/conformance/classes/members/instanceAndStaticMembers/typeOfThisInStaticMembers3.ts(3,16): error TS2334: 'this' cannot be referenced in a static property initializer.
tests/cases/conformance/classes/members/instanceAndStaticMembers/typeOfThisInStaticMembers3.ts(8,16): error TS2334: 'this' cannot be referenced in a static property initializer.
tests/cases/conformance/classes/members/instanceAndStaticMembers/typeOfThisInStaticMembers3.ts(9,26): error TS2334: 'this' cannot be referenced in a static property initializer.


==== tests/cases/conformance/classes/members/instanceAndStaticMembers/typeOfThisInStaticMembers3.ts (3 errors) ====
    class C {
        static a = 1;
        static b = this.a + 1;
                   ~~~~
!!! error TS2334: 'this' cannot be referenced in a static property initializer.
    }
    
    class D extends C {
        static c = 2;
        static d = this.c + 1;
                   ~~~~
!!! error TS2334: 'this' cannot be referenced in a static property initializer.
        static e = super.a + this.c + 1;
                             ~~~~
!!! error TS2334: 'this' cannot be referenced in a static property initializer.
    }
    